data/all_generated_tests/raw_wast_tests/loop_ImproperFunctionCallorReturnHandling_924.wast
;; 5. **Test Case**: Introduce a loop with conditionally branched `call` instructions (using `br_if`), where calls are dependent on loop-variant conditions.    - **Constraint Check**: Check for correct branching and function calling based on dynamic conditions.    - **Improper Function Call or Return Handling**: Mismanagement of conditional function calls based on loop conditions.

(assert_invalid
  (module
    (func $conditional-loop-call (param i32) (result i32)
      (local i32)
      loop (result i32)
        local.get 0
        i32.const 1
        i32.eq
        br_if 0
        local.get 0
        call $recursive-call
      end
    )
    (func $recursive-call (param i32) (result i32)
      local.get 0
    )
  )
  "type mismatch"
)